<resources>
    <string name="picture">图片</string>
    <string name="phone_number">手机号码</string>
    <string name="obtain">获取</string>
    <string name="short_message_valid_code">短信验证码</string>
    <string name="please_wait">请稍候</string>
    <string name="login">登 录</string>
    <string name="one_key_save">一键救援</string>
    <string name="schedule">进度</string>
    <string name="pay">支付</string>
    <string name="pay_with_colon">支付：</string>
    <string name="evaluation">评价</string>
    <string name="service_order">服务单</string>
    <string name="maintenance">保养</string>
    <string name="repair">维修</string>
    <string name="beauty">美容</string>
    <string name="web">网页</string>
    <string name="please_login">请登录</string>
    <string name="advisor_list">顾问列表</string>
    <string name="coupon">优惠券</string>
    <string name="choice_coupon">选择优惠券</string>
    <string name="receive_coupon">领取优惠券</string>
    <string name="new_txt">New</string>
    <string name="setting">设置</string>
    <string name="company_introduction">\t\t我是车主(北京)科技有限公司成立于2015年5月，通过搭建汽车经销商(4S店)和车主之间的手机APP交互平台，为车主提供值得信赖的全方位购车、养车体验。</string>
    <string name="personal_information">个人资料</string>
    <string name="phone">手机</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birth">生日</string>
    <string name="rmb_symbol">￥</string>
    <string name="service_advisor">服务顾问：</string>
    <string name="detail">详情</string>
    <string name="advisor">顾问</string>
    <string name="call_TA">联系TA</string>
    <string name="dealer">4S店</string>
    <string name="update_version">版本更新</string>
    <string name="feed_back">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="exit_login">退出登录</string>
    <string name="sure">确定</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="schedule_detail">进度详情</string>
    <string name="into_factory">进厂</string>
    <string name="construction">施工</string>
    <string name="final_inspection">终检</string>
    <string name="finish">完工</string>
    <string name="current_line">当前排位</string>
    <string name="minute">分钟</string>
    <string name="sure_pay">确认支付</string>
    <string name="details">明细</string>
    <string name="pay_fee">支付金额：</string>
    <string name="discount_fee">优惠金额：</string>
    <string name="bill">账单</string>
    <string name="total">合计</string>
    <string name="bill_detail">账单详情</string>
    <string name="choice_pay_way">请选择支付方式：</string>
    <string name="pay_way">支付方式：</string>
    <string name="ali_pay">支付宝</string>
    <string name="wx_pay">微信</string>
    <string name="xy_pay">兴业支付</string>
    <string name="wait_evaluation">待评价</string>
    <string name="commit">提交</string>
    <string name="license_plate">车牌：</string>
    <string name="service_type">服务类型：</string>
    <string name="time">时间：</string>
    <string name="annex">附件</string>
    <string name="kilometer">公里</string>
    <string name="service_order_detail">服务单详情</string>
    <string name="into_factory_mileage">进厂里程：</string>
    <string name="construction_time">施工时间：</string>
    <string name="bill_fee">账单金额：</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="huaxing_benchi">华星锦业奔驰品牌</string>
    <string name="group_introduction">\t\t一家按现代企业制度建立的股份制汽车销售服务企业。其经营规模，管理水平，服务模式均处于行业领先地位。集团以“华星汽车”作为企业品牌，在行业内享有较高的市场知名度和美誉度。</string>
    <string name="brand_introduction">“以成都为中心，覆盖全川的4S集群，满足您对奔驰、奥迪、JEEP、克莱斯勒、北京现代、一汽大众的不断追求！”</string>
    <string name="choice">选择</string>
    <string name="please_input_evaluation">请输入您的评价内容</string>
    <string name="feed_back_content">请输入您的意见或建议</string>
    <string name="find_new_version">发现新版本,马上为您更新</string>
    <string name="coupon_introduction">优惠券说明</string>
    <string name="please_score">请对本次服务进行评分</string>
    <string name="finish_work">完工</string>
    <string name="estimated_time_to_pick_up">预计完工时间：</string>
    <string name="actual_time_to_pick_up">实际完工时间：</string>
    <string name="wait_for_the_work_time">预计开始施工：</string>
    <string name="after_minute">分钟后</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="already_construction">已施工</string>
    <string name="all_check_item">全面检查项目</string>
    <string name="materials">物料</string>
    <string name="i_car_owner">我是车主</string>
    <string name="satisfaction_level">满意程度</string>
    <string name="group_name">四川华星汽车集团有限公司</string>
    <string name="save">保存</string>
    <string name="colon">：</string>
    <string name="obtain_discount_at_once_after_evaluate">评价立享</string>
    <string name="first_order_coupon">首单优惠券</string>
    <string name="members_enjoyment">APP会员尊享</string>
    <string name="discount_type">优惠类别</string>
    <string name="general_coupons">通用优惠券100元整</string>
    <string name="service_company">服务公司</string>
    <string name="get_at_once">立即领取</string>
    <string name="already_receive">立即领取</string>
    <string name="no">暂无</string>
    <string name="line">—</string>
    <string name="evaluate_to_receive_coupon">评价领券</string>
    <string name="use_at_once">立即体验</string>
    <string name="already_into_factory">已进厂</string>
    <string name="to">至</string>
    <string name="what_are_the_problems_in_the_service">服务中遇到什么问题？</string>
    <string name="other_supplementary_content">其他补充内容...</string>
    <string name="common_item">增选项目</string>
    <string name="service_item">服务项目</string>
    <string name="overtime">超时</string>
    <string name="yuan">元</string>
    <string name="minute_compensate_you">分钟，向您赔付</string>
    <string name="no_data_now">当前暂无数据</string>
    <string name="estimate_pick_car">预计取车</string>
    <string name="use_balance">使用余额：</string>
    <string name="has_no_balance">（无余额）</string>
    <string name="zero_yuan">0.00</string>
    <string name="balance">余额</string>
    <string name="balance_yuan">余额(元)</string>
    <string name="tip_string_new">New</string>
    <string name="can_be_use_when_pay">支付时可使用</string>
    <string name="balance_detail">余额明细</string>
    <string name="empty">""</string>
    <string name="wx">微信</string>
    <string name="ali">支付宝</string>
    <string name="other_choice">其他选择</string>
    <string name="confirm">确认</string>

</resources>
